--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -97,5 +97,14 @@
         android:layout_toEndOf="@+id/tvTitle2"
         android:text="TextView" />
 
+    <TextView
+        android:id="@+id/tvTimeStamp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="33dp"
+        android:layout_marginStart="20dp"
+        android:layout_toEndOf="@+id/tvUsername"
+        android:text="TextView" />
+
 
 </RelativeLayout>
