--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -12,8 +12,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="30dp"
-        android:layout_marginLeft="30dp"
+        android:layout_toEndOf="@+id/ivProfilePicDetails"
         android:textSize="17sp"
         android:textStyle="bold"
         tools:text="Martins" />
@@ -22,8 +23,8 @@
         android:id="@+id/ivImageDetails"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:layout_below="@+id/tvTitleDetails"
-        android:layout_marginTop="16dp"
+        android:layout_below="@+id/ivProfilePicDetails"
+        android:layout_marginTop="10dp"
         android:scaleType="centerCrop"
         tools:srcCompat="@tools:sample/avatars" />
 
@@ -105,6 +106,14 @@
         android:layout_marginTop="33dp"
         android:layout_toEndOf="@+id/tvTitleDetails"
         android:text="TextView" />
+
+    <ImageView
+        android:id="@+id/ivProfilePicDetails"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="5dp"
+        app:srcCompat="@drawable/instagram_user_filled_24" />
 
 
 </RelativeLayout>
