--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -11,9 +11,10 @@
         android:id="@+id/tvUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="30dp"
-        android:layout_marginLeft="30dp"
+        android:layout_toEndOf="@+id/ivProfilePic"
+        android:text="TextView"
         android:textSize="17sp"
         android:textStyle="bold"
         tools:text="Martins" />
@@ -22,8 +23,8 @@
         android:id="@+id/ivImage"
         android:layout_width="match_parent"
         android:layout_height="400dp"
-        android:layout_below="@+id/tvUsername"
-        android:layout_marginTop="16dp"
+        android:layout_below="@+id/ivProfilePic"
+        android:layout_marginTop="10dp"
         android:scaleType="centerCrop"
         tools:srcCompat="@tools:sample/avatars" />
 
@@ -105,6 +106,13 @@
         android:layout_marginStart="20dp"
         android:layout_toEndOf="@+id/tvUsername"
         android:text="TextView" />
+
+    <ImageView
+        android:id="@+id/ivProfilePic"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="10dp"
+        app:srcCompat="@drawable/instagram_user_filled_24" />
 
 
 </RelativeLayout>
