--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,6 +10,14 @@
     tools:context=".LoginActivity">
 
 
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="50dp"
+        app:srcCompat="@drawable/nav_logo_whiteout" />
+
     <EditText
         android:id="@+id/etUsername"
         android:layout_width="match_parent"
@@ -17,7 +25,7 @@
         android:layout_weight="1"
         android:ems="10"
         android:hint="Username"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="150dp"
 
          />
 
@@ -29,7 +37,7 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="200dp"
          />
 
     <Button
@@ -38,7 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Login"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="250dp"
         />
 
     <TextView
@@ -46,9 +54,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="350dp"
         android:text="OR"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
         />
 
     <TextView
@@ -56,9 +64,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="400dp"
         android:text="Click here to register"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal"
         android:textColor="@color/blue"/>
 
     <Button
@@ -67,8 +75,10 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:text="Sign up"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="250dp"
         android:visibility="invisible"/>
+
+
 
 
 </FrameLayout>
